Fixed center video getting bottom cut off.

--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -9,6 +9,7 @@ video.video {
   border-radius: 4px;
   overflow: hidden;
   position: relative;
+  height: 100%;
 }
 
 .placeholder {
